// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authentication Component should allow being disabled: disabled 1`] = `
<Context.Provider
  value={
    {
      "authorized": {
        "subscriptions": true,
      },
      "errorCodes": [],
      "errorStatus": undefined,
    }
  }
>
  <MessageView
    icon={null}
    message={null}
    pageTitle={null}
    title={null}
  >
    <Maintenance
      description="t(curiosity-auth.maintenanceCopy, ...)"
    />
  </MessageView>
</Context.Provider>
`;

exports[`Authentication Component should render a basic component: basic 1`] = `
<Context.Provider
  value={
    {
      "authorized": {},
      "errorCodes": [],
      "errorStatus": undefined,
    }
  }
>
  <MessageView
    icon={null}
    message={null}
    pageTitle={null}
    title={null}
  >
    <NotAuthorized
      serviceName="Subscriptions"
    />
  </MessageView>
</Context.Provider>
`;

exports[`Authentication Component should render a component authorized: authorized 1`] = `
<span
  class="test"
>
  lorem
</span>
`;

exports[`Authentication Component should render a component error: error 1`] = `
<Context.Provider
  value={
    {
      "authorized": {},
      "errorCodes": [],
      "errorStatus": undefined,
    }
  }
>
  <MessageView
    icon={null}
    message={null}
    pageTitle={null}
    title={null}
  >
    <NotAuthorized
      serviceName="Subscriptions"
    />
  </MessageView>
</Context.Provider>
`;

exports[`Authentication Component should render a component pending: pending 1`] = `
<Context.Provider
  value={
    {
      "authorized": {},
      "errorCodes": [],
      "errorStatus": undefined,
    }
  }
>
  <MessageView
    icon={[Function]}
    message="t(curiosity-auth.pending, ...)"
    pageTitle=" "
    title={null}
  />
</Context.Provider>
`;

exports[`Authentication Component should return a message on 401 error: 401 error 1`] = `
<h5
  class="pf-v5-c-title pf-m-lg"
  data-ouia-component-id="OUIA-Generated-Title-11"
  data-ouia-component-type="PF5/Title"
  data-ouia-safe="true"
>
  You do not have access to Subscriptions
</h5>
`;

exports[`Authentication Component should return a redirect on 418 error: 418 error 1`] = `
<Context.Provider
  value={
    {
      "authorized": {},
      "errorCodes": [],
      "errorStatus": 418,
    }
  }
>
  <OptinView
    t={[Function]}
    updateAccountOptIn={[Function]}
    useDispatch={[Function]}
    useSelectorsResponse={[Function]}
    useSession={[Function]}
  />
</Context.Provider>
`;

exports[`Authentication Component should return a redirect on a specific 403 error and error code: 403 error 1`] = `
<authentication
  props="{
  "children": [
    {
      "props": {
        "className": "test",
        "children": "lorem"
      },
      "type": "span"
    }
  ],
  "appName": "subscriptions",
  "isDisabled": false
}"
>
  <section
    class="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
    widget-type="InsightsPageHeader"
  >
    <div
      class="pf-v5-l-flex pf-m-justify-content-space-between-on-sm"
    >
      <div
        class=""
      >
        <h1
          class="pf-v5-c-title pf-m-2xl pf-u-mb-sm"
          data-ouia-component-id="OUIA-Generated-Title-8"
          data-ouia-component-type="PF5/Title"
          data-ouia-safe="true"
          widget-type="InsightsPageHeaderTitle"
        >
          Subscriptions
        </h1>
      </div>
    </div>
  </section>
  <section
    class="pf-v5-c-page__main-section pf-m-no-padding curiosity "
  >
    <section
      class="curiosity-page-section "
    >
       
      <div
        class="pf-v5-c-empty-state ins-c-not-authorized "
      >
        <div
          class="pf-v5-c-empty-state__content"
        >
          <div
            class="pf-v5-c-empty-state__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
              />
            </svg>
          </div>
          <h5
            class="pf-v5-c-title pf-m-lg"
            data-ouia-component-id="OUIA-Generated-Title-9"
            data-ouia-component-type="PF5/Title"
            data-ouia-safe="true"
          >
            You do not have access to Subscriptions
          </h5>
          <div
            class="pf-v5-c-empty-state__body"
          >
            Contact your organization administrator(s) for more information or visit 
            <a
              href="./settings/my-user-access"
            >
              My User Access
            </a>
              to learn more about your permissions.
          </div>
          <a
            aria-disabled="false"
            class="pf-v5-c-button pf-m-primary"
            data-ouia-component-id="OUIA-Generated-Button-primary-3"
            data-ouia-component-type="PF5/Button"
            data-ouia-safe="true"
            href="."
          >
            Go to landing page
          </a>
        </div>
      </div>
       
    </section>
  </section>
</authentication>
`;

exports[`Authentication Component should return a redirect on a specific 403 error and error code: 403 redirect error 1`] = `
<authentication
  props="{
  "children": [
    {
      "props": {
        "className": "test",
        "children": "lorem"
      },
      "type": "span"
    }
  ],
  "appName": "subscriptions",
  "isDisabled": false
}"
>
  <section
    class="pf-v5-c-page__main-section pf-m-no-padding curiosity "
  >
    <div
      class="pf-v5-c-card"
      data-ouia-component-id="OUIA-Generated-Card-1"
      data-ouia-component-type="PF5/Card"
      data-ouia-safe="true"
      data-test="optinView"
      id=""
    >
      <div
        class="pf-v5-l-flex"
      >
        <div
          class="pf-v5-l-flex pf-m-flex-2"
        >
          <div
            class=""
          >
            <div
              class="pf-v5-c-card__title"
            >
              <div
                class="pf-v5-c-card__title-text"
              >
                <h1
                  class="pf-v5-c-title pf-m-2xl"
                  data-ouia-component-id="OUIA-Generated-Title-1"
                  data-ouia-component-type="PF5/Title"
                  data-ouia-safe="true"
                >
                  t(curiosity-optin.cardTitle, {"appName":"Subscriptions"})
                </h1>
              </div>
            </div>
            <div
              class="pf-v5-c-card__body"
            >
              t(curiosity-optin.cardDescription, {"appName":"Subscriptions"})
            </div>
            <div
              class="pf-v5-c-card__title"
            >
              <div
                class="pf-v5-c-card__title-text"
              >
                <h2
                  class="pf-v5-c-title pf-m-xl"
                  data-ouia-component-id="OUIA-Generated-Title-2"
                  data-ouia-component-type="PF5/Title"
                  data-ouia-safe="true"
                >
                  t(curiosity-optin.cardSeeTitle)
                </h2>
              </div>
            </div>
            <div
              class="pf-v5-c-card__body"
            >
              t(curiosity-optin.cardSeeDescription)
            </div>
            <div
              class="pf-v5-c-card__title"
            >
              <div
                class="pf-v5-c-card__title-text"
              >
                <h2
                  class="pf-v5-c-title pf-m-xl"
                  data-ouia-component-id="OUIA-Generated-Title-3"
                  data-ouia-component-type="PF5/Title"
                  data-ouia-safe="true"
                >
                  t(curiosity-optin.cardReportTitle)
                </h2>
              </div>
            </div>
            <div
              class="pf-v5-c-card__body"
            >
              t(curiosity-optin.cardReportDescription)
            </div>
            <div
              class="pf-v5-c-card__title"
            >
              <div
                class="pf-v5-c-card__title-text"
              >
                <h2
                  class="pf-v5-c-title pf-m-xl"
                  data-ouia-component-id="OUIA-Generated-Title-4"
                  data-ouia-component-type="PF5/Title"
                  data-ouia-safe="true"
                >
                  t(curiosity-optin.cardFilterTitle)
                </h2>
              </div>
            </div>
            <div
              class="pf-v5-c-card__body"
            >
              t(curiosity-optin.cardFilterDescription)
            </div>
            <div
              class="pf-v5-c-card__footer"
            >
              <form
                class="pf-v5-c-form"
                novalidate=""
              >
                <div
                  class="pf-v5-c-form__group pf-m-action"
                >
                  <div
                    class="pf-v5-c-form__group-control"
                  >
                    <div
                      class="pf-v5-c-form__actions"
                    >
                      <button
                        aria-disabled="false"
                        class="pf-v5-c-button pf-m-primary"
                        data-ouia-component-id="OUIA-Generated-Button-primary-1"
                        data-ouia-component-type="PF5/Button"
                        data-ouia-safe="true"
                        data-test="optinButtonSubmit"
                        type="button"
                      >
                        t(curiosity-optin.buttonActivate, {"appName":"Subscriptions"})
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          class="pf-v5-l-flex pf-m-flex-1 pf-m-align-self-center"
        >
          <div
            class=""
          >
            <div
              class="pf-v5-c-card__body"
            >
              <div
                class="pf-v5-c-card curiosity-optin-tour"
                data-ouia-component-id="OUIA-Generated-Card-2"
                data-ouia-component-type="PF5/Card"
                data-ouia-safe="true"
                id=""
              >
                <div
                  class="pf-v5-c-card__header"
                >
                  <div
                    class="pf-v5-c-card__actions"
                  >
                    <img
                      alt="t(curiosity-optin.tourTitleImageAlt)"
                      aria-hidden="true"
                      class="pf-v5-c-brand curiosity-optin-image"
                      src="graph4x.png"
                      srcset="graph4x.png 1064w, graph2x.png 600w"
                    />
                  </div>
                </div>
                <div
                  class="pf-v5-c-card__title"
                >
                  <div
                    class="pf-v5-c-card__title-text"
                  >
                    <h3
                      class="pf-v5-c-title pf-m-2xl"
                      data-ouia-component-id="OUIA-Generated-Title-5"
                      data-ouia-component-type="PF5/Title"
                      data-ouia-safe="true"
                    >
                      t(curiosity-optin.tourTitle)
                    </h3>
                  </div>
                </div>
                <div
                  class="pf-v5-c-card__body"
                >
                  t(curiosity-optin.tourDescription)
                </div>
                <div
                  class="pf-v5-c-card__footer"
                >
                  <button
                    aria-disabled="false"
                    class="pf-v5-c-button pf-m-secondary uxui-curiosity__button-tour"
                    data-ouia-component-id="OUIA-Generated-Button-secondary-1"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    data-test="optinButtonTour"
                    type="button"
                  >
                    t(curiosity-optin.buttonTour)
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</authentication>
`;
